<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_more_inf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/back2"
    >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="95dp"
            android:text="@string/developyrfself"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toLeftOf="@id/tvText"
            android:background="@drawable/ratingicon"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@id/tvText"
            android:background="@drawable/ratingicon"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="298dp"
            android:layout_height="93dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@mipmap/finalroundedcornerlogo" />

    </RelativeLayout>

    <TextView
        android:id="@+id/neeview"
        android:layout_width="317dp"
        android:layout_height="24dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="0dp"
        android:text="@string/abt"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="56dp"
        android:text="@string/version"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/contactss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/neeview"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="119dp"
        android:text="@string/contactss"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/finalword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:text="@string/finalword"
        android:textColor="#ffffff"
        android:textSize="22sp" />


</RelativeLayout>
